# pac-man_game_SFML

./: CMakeLists.txt  CMakeSettings.json  README.txt
cmake/: CompilerSettings.cmake  SFML.cmake  Zip.cmake
include/: Board.h  Bricks.h  Buttons.h  CMakeLists.txt  ContinueButton.h  Controller.h  Cookies.h  Define.h  Demons.h  Door.h  ExitButton.h  Font.h  Gift.h  GiftAddLife.h  GiftAddTime.h  GiftFreezeDemon.h  GiftSuperPakman.h  HelpButton.h  InformationDisplay.h  Key.h  LoadingImages.h  Menu.h  MovingObject.h  NewGameButton.h  Object.h  Pakman.h  PakmanBaseBehavior.h  PakmanBehavior.h  Resources.h  Sound.h  StandingObject.h  SuperPakmanBehavior.h  Timer.h
resources/: CMakeLists.txt  Level1.txt  Level2.txt  Level3.txt  Playlist.txt
src/: Board.cpp  Bricks.cpp  Buttons.cpp  CMakeLists.txt  ContinueButton.cpp  Controller.cpp  Cookies.cpp  Demons.cpp  Door.cpp  ExitButton.cpp  Font.cpp  Gift.cpp  GiftAddLife.cpp  GiftAddTime.cpp  GiftFreezeDemon.cpp  GiftSuperPakman.cpp  HelpButton.cpp  InformationDisplay.cpp  Key.cpp  LoadingImages.cpp  Menu.cpp  MovingObject.cpp  NewGameButton.cpp  Object.cpp  Pakman.cpp  PakmanBehavior.cpp  Resources.cpp  Sound.cpp  StandingObject.cpp  SuperPakmanBehavior.cpp  Timer.cpp  main.cpp
